k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mail-migration
  namespace: mail-migration
spec:
  selector:
    app: mail-migration
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
